# colorschemed

./: Cargo.toml  README.md
config/: config.toml  example.toml
src/: cli.rs  config.rs  dbus.rs  main.rs  theme.rs
systemd/: colorschemed.service
