[package]
name = "colorschemed"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
futures-util = { version = "0.3.32" }
tokio = { version = "1.52.0", features = ["full"] }
zbus = { version = "5.14.0", features = ["tokio"] }
zvariant = { version = "5.10.0" }
