[package]
name = "colorschemed"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
futures-util = { version = "0.3.32" }
log = "0.4.29"
tokio = { version = "1.52.0", features = ["full"] }
zbus = { version = "5.14.0", features = ["tokio"] }
zvariant = { version = "5.10.0" }
